[tool.poetry]
name = "noq"
version = "0.1.0"
description = ""
authors = ["elajth <johan.lith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
