[tool.poetry]
name = "noq"
version = "0.1.0"
description = ""
authors = ["elajth <johan.lith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"
sqlmodel = "^0.0.12"
icecream = "^2.1.3"
python-dotenv = "^1.0.0"
faker = "^20.1.0"
pydantic = "^1.10.13"
gitpython = "^3.1.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
